# zero-knowledge-proof

./: Cargo.toml  README.md  build.rs
proto/: zkp_auth.proto
src/: lib.rs  server.rs  zkp_auth.rs
